<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item1"
        android:title="@string/create_new_project" />
    <item
        android:id="@+id/item2"
        android:title="@string/open_a_project"/>
    <item
        android:id="@+id/item3"
        android:title="@string/help"/>
    <group >
        <item
            android:id="@+id/gi1"
            android:title="@string/group_item1" />
        <item
            android:id="@+id/gi2"
            android:title="@string/group_item2" />
    </group>
        <item android:title="@string/submenu">
        <menu>
            <item
                android:id="@+id/s1"
                android:title="@string/submenu_item1" />
            <item
                android:id="@+id/s2"
                android:title="@string/submenu_item2" />
        </menu>
    </item>
</menu>